# mouse-move-detector

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build-installer.ps1  installer.nsi
src/: main.rs
