[package]
name = "mouse-speed-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm"
] }